# casconf

./: .gitignore  API.md  ARCHITECTURE.md  AUTHORS  CONTRIBUTING.md  ChangeLog  DESIGN.md  LICENSE  Pipfile  QUICKSTART.md  README.md  USAGE.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: release.yaml  release.yml  test.yaml  test.yml
cascconf/: __init__.py  __main__.py  api.py  cli.py  discovery.py  exceptions.py  merger.py  parser.py  py.typed  registry.py  writer.py
casconf/: __init__.py  __main__.py  api.py  cli.py  discovery.py  exceptions.py  merger.py  parser.py  py.typed  registry.py  writer.py
tests/: __init__.py  test_api.py  test_cli.py  test_coverage.py  test_discovery.py  test_exceptions.py  test_merger.py  test_parser.py  test_registry.py  test_writer.py
tests/fixtures/base/: config.json
tests/fixtures/extra/: config.ini
tests/fixtures/override/: config.yaml
