[metadata]
name = casconf
summary = Cascading Configuration Manager - deep-merge configuration files across multiple directories
long_description = file: README.md
long_description_content_type = text/markdown
author = ConsoleCatzirl
home_page = https://github.com/ConsoleCatzirl/casconf
license = MIT AND GPL-3.0-only
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14

[files]
packages =
    casconf

[entry_points]
console_scripts =
    casconf = casconf.cli:main

[pbr]
warnerrors = True

[flake8]
max-line-length = 127
